--- a/css/index.css
+++ b/css/index.css
@@ -2,4 +2,10 @@ h1 {
   color: hotpink;
 }
 
+#scanButton {
+  display: none;
+  width: 4rem;
+  height: 2rem;
+}
+
 /*# sourceMappingURL=index.css.map */
