--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,48 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
+body{
+    font-family: "Times New Roman";
+}
+.title{
+    font-family: "Elephant";
+}
+
+.subheading{
+    font-family: "Century";
+}
+
+.container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+}
+
+.content{
+    //outline: rgb(255, 0, 0) solid;
+    height: 95vh;
+    width: max-width;
+    //background: rgb(0, 174, 99);
+    background: #368c9c;
+}
+
+.info{
+    
+    grid-column: 2 / span 2;
+    grid-row: seconed-line / 1;
+    display: grid;
+    place-items: center;
+    //grid-area: 1 / col2-start / last-line / 2;
+}
+
+.headers{
+    display: grid;
+    place-items: center;
+    grid-column: 1 / span 1;
+    grid-row: first-line / 1;
+    
+}
+
 h1{
-    color:hotpink
+    color:rgb(0, 0, 0)
 }
 
 #scanButton{
@@ -8,4 +50,14 @@ h1{
     width: 4rem;
     height: 2rem;
 } 
+
+footer{
+    //background: rgb(50, 50, 50);
+    background: #343434;
+    height: 5vh;
+
+    h1{
+        color: white;
+    }
+}
 
