--- a/css/index.css
+++ b/css/index.css
@@ -24,8 +24,8 @@ h2, h3, h4, h5, h6 {
 
 .container {
   display: grid;
-  grid-template-areas: "header header header" "main main" "main main";
-  grid-template-columns: 2fr 1fr;
+  grid-template-areas: "header header header" "main main main" "main main main";
+  grid-template-columns: 1fr 1fr 1fr;
   column-gap: 1rem;
   row-gap: 2rem;
 }
@@ -37,24 +37,52 @@ h2, h3, h4, h5, h6 {
   background: #368c9c;
 }
 
-.info {
+.title {
+  margin-top: 1rem;
+  font-size: 2rem;
+  color: #f5f5f5;
+  justify-self: center;
+}
+
+.loge-molekyl {
   grid-area: header;
   grid-column: 1;
+  margin: 1rem;
+  margin-top: 2rem;
+  width: 9rem;
+  height: auto;
+}
+
+.loge-project-air {
+  grid-area: header;
+  grid-column: 3;
+  width: 20rem;
+  height: auto;
+  justify-self: end;
+}
+
+.info {
+  grid-area: main;
+  grid-column: 1;
+  grid-row: 2;
 }
 
 .info2 {
   grid-area: main;
-  grid-column: 2;
+  grid-column: 3;
+  grid-row: 2;
 }
 
 .info3 {
   grid-area: main;
   grid-column: 1;
+  grid-row: 3;
 }
 
 .info4 {
-  grid-area: header;
-  grid-column: 2;
+  grid-area: main;
+  grid-column: 3;
+  grid-row: 3;
 }
 
 #fruit-btn {
