--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
+/* @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"); */
 h1 {
   color: hotpink;
 }
@@ -6,6 +6,37 @@ h1 {
 #scanButton {
   display: none;
   width: 4rem;
+  height: 2rem;
+}
+
+main {
+  width: max-content;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  justify-content: center;
+}
+
+main * {
+  display: flex;
+  margin: auto;
+  width: max-content;
+}
+
+button {
+  font-size: 1.5rem;
+  padding: 10px;
+  width: 8rem;
+  justify-content: center;
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+
+.form button {
+  font-size: 1rem;
+  width: auto;
+  padding: 5px;
   height: 2rem;
 }
 
