--- a/scss/index.scss
+++ b/scss/index.scss
@@ -8,3 +8,11 @@ h1 {
   width: 4rem;
   height: 2rem;
 }
+
+main {
+  width: max-content;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
