--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,13 @@ body {
   background: #e0f1f5;
   height: 100vh;
   width: 100vw;
+  /*background: url("../index.svg");
+  background-size: cover;*/
+}
+
+.image {
+  height: 100vh;
+  width: 100vw;
   background: url("../index.svg");
   background-size: cover;
 }
