--- a/scss/index.scss
+++ b/scss/index.scss
@@ -11,6 +11,13 @@ body{
     background: #e0f1f5;
     height: 100vh;
     width: 100vw;
+    /*background: url("../index.svg");
+    background-size: cover;*/
+}
+
+.image{
+    height: 100vh;
+    width: 100vw;
     background: url("../index.svg");
     background-size: cover;
 }
