--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css"); */
+@import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 h1 {
   color: hotpink;
 }
@@ -9,35 +9,53 @@ h1 {
   height: 2rem;
 }
 
-main {
+/*main {
   width: max-content;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}*/
+body {
+  /*position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -40%);*/
+  display: grid;
+  grid-template: "header header header" "main main main";
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem;
   justify-content: center;
+  align-content: center;
 }
 
-main * {
-  display: flex;
-  margin: auto;
+main {
+  margin: 3rem;
+  font-size: 1.5em;
+  padding: 10rem;
+  background-color: aquamarine;
   width: max-content;
+  border-radius: 2em;
+  box-shadow: 0px 6px 10px #333333;
 }
 
-button {
-  font-size: 1.5rem;
-  padding: 10px;
-  width: 8rem;
-  justify-content: center;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+.content {
+  grid-area: main;
+  justify-self: center;
 }
 
-.form button {
-  font-size: 1rem;
-  width: auto;
-  padding: 5px;
-  height: 2rem;
+h1 {
+  margin-top: 0;
+  grid-area: header;
+}
+
+h2 {
+  font-size: 1em;
+  margin: 0;
+}
+
+input {
+  margin-top: 0;
 }
 
 /*# sourceMappingURL=index.css.map */
