--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,10 +9,49 @@ h1 {
   height: 2rem;
 }
 
-main {
+/*main {
   width: max-content;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}*/
+
+body {
+  /*position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -40%);*/
+  display: grid;
+  grid-template: "header header header" "main main main";
+  grid-row-gap: 1rem;
+  grid-column-gap: 1rem;
+  justify-content: center;
+  align-content: center;
+}
+main{
+  margin: 3rem;
+  font-size: 1.5em;
+  padding: 10rem;
+  background-color: aquamarine;
+  width: max-content;
+  border-radius: 2em;
+  box-shadow: 0px 6px 10px #333333;
+}
+
+.content{
+  grid-area: main;
+  justify-self: center;
+}
+h1 {
+  margin-top: 0;
+  grid-area: header;
+
+}
+h2 {
+  font-size: 1em;
+  margin: 0;
+}
+input {
+  margin-top: 0;
 }
