--- a/css/index.css
+++ b/css/index.css
@@ -1,8 +1,4 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
-h1 {
-  color: hotpink;
-}
-
 #scanButton {
   display: none;
   width: 4rem;
@@ -21,19 +17,22 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -40%);*/
+  background: #e0f1f5;
+  color: #f5f5f5;
   display: grid;
   grid-template: "header header header" "main main main";
   grid-row-gap: 1rem;
   grid-column-gap: 1rem;
   justify-content: center;
   align-content: center;
+  color: #343434;
 }
 
 main {
   margin: 3rem;
   font-size: 1.5em;
   padding: 10rem;
-  background-color: aquamarine;
+  background-color: #368c9c;
   width: max-content;
   border-radius: 2em;
   box-shadow: 0px 6px 10px #333333;
