--- a/scss/index.scss
+++ b/scss/index.scss
@@ -9,19 +9,7 @@ h1 {
   height: 2rem;
 }
 
-/*main {
-  width: max-content;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}*/
-
 body {
-  /*position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -40%);*/
   background: #e0f1f5;
   color: #f5f5f5;
   display: grid;
@@ -35,27 +23,29 @@ body {
 main{
   margin: 3rem;
   font-size: 1.5em;
-  padding: 10rem;
+  padding: 8rem;
   background-color: #368c9c;
   width: max-content;
   border-radius: 2em;
   box-shadow: 0px 6px 10px #333333;
-}
-
-.content{
-  justify-self: center;
+  justify-content: center;
 }
 
 .conterner{
   grid-area: main;
   justify-self: center;
+  
+}
+
+.content{
+  justify-content: center;
 }
 
 h1 {
   font-size: 2rem;
   margin-top: 0;
   grid-area: header;
-
+  margin-bottom: 2rem;
 }
 h2 {
   font-size: 1.2rem;
@@ -64,6 +54,7 @@ h2 {
 
 p{
   font-size: 1.5rem;
+  margin: 2rem;
 }
 input {
   margin-top: 0;
