--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
+/*h1 {
+  //color: hotpink;
+}*/
 #scanButton {
   display: none;
   width: 4rem;
@@ -56,6 +59,23 @@ p {
 
 input {
   margin-top: 0;
+}
+
+@media screen and (max-width: 1280px) and (max-height: 800px) {
+  main {
+    margin: 2rem;
+    font-size: 1.2rem;
+    padding: 6rem;
+  }
+  h1 {
+    font-size: 1.2rem;
+  }
+  h2 {
+    font-size: 1rem;
+  }
+  p {
+    font-size: 1.1rem;
+  }
 }
 
 /*# sourceMappingURL=index.css.map */
