--- a/css/index.css
+++ b/css/index.css
@@ -52,6 +52,27 @@ h2 {
   margin: 0;
 }
 
+.settings {
+  height: max-content;
+  width: max-content;
+  background-color: #368c9c;
+  padding: 1rem;
+  margin-top: 3rem;
+  margin-right: -6rem;
+  border-radius: 1rem;
+  box-shadow: 0px 6px 10px #333333;
+  grid-area: header;
+  grid-column: 3;
+}
+.settings:hover {
+  background-color: #333333;
+}
+
+.settings-icon {
+  width: 2rem;
+  height: auto;
+}
+
 p {
   font-size: 1.5rem;
   margin: 2rem;
