--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,103 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 h1 {
   color: hotpink;
+  padding-top: 1.5rem;
+}
+
+body {
+  background-color: #368c9c;
+}
+
+.container {
+  display: grid;
+  grid-template: "header header header" "main main main" "main main main" "main main main" "main main main" "main main main" "main main main" "main main main";
+  grid-template-columns: 1fr 2fr 1fr;
+  column-gap: 1rem;
+  row-gap: 2rem;
+  justify-items: center;
 }
 
 #scanButton {
   display: none;
   width: 4rem;
   height: 2rem;
+}
+
+.firstHeader {
+  font-size: 2.5rem;
+  grid-area: header;
+  justify-self: center;
+}
+
+.secondHeader {
+  font-size: 2rem;
+  grid-area: main;
+  grid-column: 2;
+  grid-row: auto;
+  padding: 0px;
+}
+
+.thirdHeader {
+  font-weight: bold;
+  display: grid;
+  grid-area: main;
+  grid-column: 1;
+  grid-row: auto;
+  grid-auto-flow: column;
+  padding: 1rem;
+}
+
+.firstCard {
+  background: #e0f1f5;
+  width: 8rem;
+  height: 4rem;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  border: none;
+  grid-area: main;
+  grid-column: 2;
+  grid-row: auto;
+  grid-auto-flow: row;
+}
+
+.firstCard:hover {
+  opacity: 1;
+  box-shadow: 3px 3px 5px 1px #343434;
+}
+
+.secondCard {
+  background: #e0f1f5;
+  width: 8rem;
+  height: 4rem;
+  padding: 16px 32px;
+  text-align: center;
+  font-size: 16px;
+  margin: 4px 2px;
+  opacity: 0.6;
+  transition: 0.3s;
+  border: none;
+  grid-area: main;
+  grid-column: 2;
+  grid-row: auto;
+  grid-auto-flow: row;
+}
+
+.secondCard:hover {
+  opacity: 1;
+  box-shadow: 3px 3px 5px 1px #343434;
+}
+
+.buttons1 + .buttons2 + .buttons3 + .buttons4 + .buttons5 {
+  display: grid;
+  grid-area: main;
+  grid-column: 2;
+  grid-row: 3;
+  grid-auto-flow: row;
+  justify-content: space-evenly;
 }
 
 /*# sourceMappingURL=index.css.map */
