--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,6 +1,6 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 
-html {
+/*html {
     background: radial-gradient(at 50vw bottom, rgb(0, 0, 0) 0vw, rgb(4, 45, 59) 50vw, rgb(4, 45, 59) 100vw) no-repeat;
     background-position: bottom;
     background-size: cover;
@@ -9,10 +9,14 @@ html {
 body{
     font-family: "Times New Roman";
     background: #e0f1f5;
+    color: #343434;
     height: 100vh;
     width: 100vw;
-    /*background: url("../index.svg");
-    background-size: cover;*/
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    background: url("../index.svg");
+    background-size: cover;
 }
 
 .image{
@@ -20,10 +24,6 @@ body{
     width: 100vw;
     background: url("../index.svg");
     background-size: cover;
-}
-
-h1{
-    font-family: "Elephant";
 }
 
 h2, h3, h4, h5, h6{
@@ -117,9 +117,111 @@ h2, h3, h4, h5, h6{
     }
 }
 
-h1{
-    color:rgb(0, 0, 0);
+#scanButton {
+  display: none;
+  width: 4rem;
+  height: 2rem;
 }
+
+main{
+  margin: 3rem;
+  font-size: 1.5em;
+  padding: 8rem;
+  background-color: #368c9c;
+  width: max-content;
+  border-radius: 2em;
+  box-shadow: 0px 6px 10px #333333;
+  justify-content: center;
+}
+
+.conterner{
+  grid-area: main;
+  justify-self: center;
+}
+
+.content{
+  justify-content: center;
+}
+
+h1 {
+  font-size: 2rem;
+  margin-top: 0;
+  grid-area: header;
+  margin-bottom: 2rem;
+  font-family: "Elephant";
+  color:rgb(0, 0, 0);
+}
+
+h2 {
+  font-size: 1.2rem;
+  margin: 0;
+}
+
+.settings{
+  height: max-content;
+  width: max-content;
+  background-color: #368c9c;
+  padding: 1rem;
+  margin-top: 3rem;
+  margin-right: -6rem;
+  border-radius: 1rem;
+  box-shadow: 0px 6px 10px #333333;
+  grid-area: header;
+  grid-column: 3;
+
+  &:hover{
+    background-color: #333333;
+  }
+}
+
+.settings-icon{
+  width: 2rem;
+  height: auto;
+}
+
+p{
+  font-size: 1.5rem;
+  margin: 2rem;
+}
+
+input {
+  margin-top: 0;
+}
+
+footer{
+  display: grid;
+  background: #343434;
+  height: 5vh;
+
+  h1{
+      color: white;
+  }
+}
+
+@media screen and (max-width: 1280px) and (max-height: 800px){
+  main{
+    margin: 2rem;
+    font-size: 1.2rem;
+    padding: 6rem;
+  }
+
+  h1 {
+    font-size: 1.2rem;
+  }
+  h2 {
+    font-size: 1rem;
+  }
+  
+  p{
+    font-size: 1.1rem;
+  }
+}*/
+
+html{
+    background: #e0f1f5;
+    background-position: bottom;
+    background-size: cover;
+  }
 
 #scanButton {
   display: none;
@@ -127,6 +229,20 @@ h1{
   height: 2rem;
 }
 
+body{
+  font-family: "Times New Roman";
+}
+
+h1{
+  font-family: "Elephant";
+  color:rgb(0, 0, 0);
+}
+
+h2, h3, h4, h5, h6{
+  font-family: "Century";
+}
+
+#layout-start{
 body {
   background: #e0f1f5;
   color: #f5f5f5;
@@ -219,12 +335,130 @@ input {
   }
 }
 
-footer{
-    display: grid;
-    background: #343434;
-    height: 5vh;
 
-    h1{
-        color: white;
-    }
+}
+
+#layout-air{
+  main{
+    background: radial-gradient(at 50vw bottom, rgb(0, 0, 0) 0vw, rgb(4, 45, 59) 50vw, rgb(4, 45, 59) 100vw) no-repeat;
+    background-position: bottom;
+    background-size: cover;
+    //background: #e0f1f5;
+    height: 100vh;
+    width: 100vw;
+    
+  }
+
+  .image{
+      height: 100vh;
+      width: 100vw;
+      grid-area: header;
+      justify-self: center;
+      align-self: center;
+
+      background: url("../index.svg") no-repeat;
+      background-position: bottom;
+      //background-size: cover;
+  }
+
+  .container{
+      display: grid;
+      grid-template-areas: 
+      "header header header"
+      "main main main"
+      "main main main";
+      grid-template-columns: 1fr 1fr 1fr;
+      column-gap: 1rem;
+      row-gap: 2rem;
+  }
+
+  .content{
+      //outline: rgb(255, 0, 0) solid;
+      margin: 1rem;
+      padding: 1rem;
+      background: #368c9c;
+  }
+
+  .title{
+      margin-top: 1rem;
+      font-size: 2rem;
+      color: #f5f5f5;
+      grid-area: header;
+      grid-column: 2;
+      justify-self: center;
+  }
+
+  .loge-molekyl{
+      grid-area: header;
+      grid-column: 1;
+      margin: 1rem;
+      margin-top: 2rem;
+      width: 9rem;
+      height: auto;
+  }
+
+  .loge-project-air{
+      grid-area: header;
+      grid-column: 3;
+      width: 20rem;
+      height: auto;
+      justify-self: end;
+  }
+
+  .info{
+      grid-area: main;
+      grid-column: 1;
+      grid-row: 2;
+  }
+
+  .info2{
+      grid-area: main;
+      grid-column: 3;
+      grid-row: 2;
+  }
+
+  .info3{
+      grid-area: main;
+      grid-column: 1;
+      grid-row: 3;
+  }
+
+  .info4{
+      grid-area: main;
+      grid-column: 3;
+      grid-row: 3;
+  }
+
+  #fruit-btn{
+      margin: 1rem;
+      padding: 1rem;
+      padding-left: 3rem;
+      padding-right: 3rem;
+      max-width: fit-content;
+      height: fit-content;
+      place-items: end;
+
+      background: #f5f5f5;
+      border-color: #f5f5f5;
+      border-style: unset;
+      border-radius: 30px;
+
+      &:hover{
+          background: #fefefe;
+          border-color: #fefefe;
+          box-shadow: 4px 4px 3px 1px #343434;
+      }
+  }
+
+  footer{
+      display: grid;
+      background: #343434;
+      height: 5vh;
+
+      h1{
+          color: white;
+      }
+  }
+
+
 }
