--- a/css/index.css
+++ b/css/index.css
@@ -240,7 +240,7 @@ h2, h3, h4, h5, h6 {
   font-family: "Century";
 }
 
-#layout-start body {
+#layout-start {
   background: #e0f1f5;
   color: #f5f5f5;
   display: grid;
@@ -321,6 +321,9 @@ h2, h3, h4, h5, h6 {
   }
 }
 
+#layout-air {
+  display: none;
+}
 #layout-air main {
   background: radial-gradient(at 50vw bottom, rgb(0, 0, 0) 0vw, rgb(4, 45, 59) 50vw, rgb(4, 45, 59) 100vw) no-repeat;
   background-position: bottom;
