--- a/scss/index.scss
+++ b/scss/index.scss
@@ -243,7 +243,7 @@ h2, h3, h4, h5, h6{
 }
 
 #layout-start{
-body {
+
   background: #e0f1f5;
   color: #f5f5f5;
   display: grid;
@@ -253,7 +253,7 @@ body {
   justify-content: center;
   align-content: center;
   color: #343434;
-}
+
 main{
   margin: 3rem;
   font-size: 1.5em;
@@ -339,6 +339,10 @@ input {
 }
 
 #layout-air{
+
+  display: none;
+  
+
   main{
     background: radial-gradient(at 50vw bottom, rgb(0, 0, 0) 0vw, rgb(4, 45, 59) 50vw, rgb(4, 45, 59) 100vw) no-repeat;
     background-position: bottom;
