fetch by card (#88)
Co-authored-by: Pontus Olsson <58231866+pontusolsson03@users.noreply.github.com>

--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,12 @@ h2 {
   height: auto;
 }
 
+#refresh-btn {
+  position: fixed;
+  margin: 4em;
+  cursor: pointer;
+}
+
 p {
   font-size: 1.5rem;
   margin: 2rem;
