--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,8 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
 h1{
-    color:hotpink;
-    padding-top: 1.5rem;
-    
+    color: black;
+    padding-top: 1.5rem;   
 }
 
 body{
@@ -14,11 +13,22 @@ body{
     display: grid;
     grid-template: "header header header" "main main main" "main main main" "main main main" "main main main" "main main main" "main main main" "main main main";
     grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: repeat(20vh);
     column-gap: 1rem;
     row-gap: 2rem;
     justify-items: center;   
 }
 
+h1.firstHeader{
+    display: flex;
+    justify-content: center;
+    border-bottom: solid;
+    border-color: #343434;
+    background-color: #e0f1f5;
+    opacity: 0.6;
+    font-size: 2.5rem;
+    padding: 1rem;
+}
 #scanButton{
     display: none;
     width: 4rem;
@@ -26,22 +36,24 @@ body{
 } 
 
 
-.firstHeader{
-    font-size: 2.5rem;
-    grid-area: header;
-    justify-self: center;
-}
+//.firstHeader{
+    //font-size: 2.5rem;
+    //grid-area: header;
+    //justify-self: center;
+//}
 
 .secondHeader{
     font-size: 2rem;
     grid-area: main;
     grid-column: 2;
     grid-row: auto;
-    padding: 0px;
+    padding-top: 2rem;
     
 }
 
 .thirdHeader{
+    width: 8rem;
+    height: 3.5rem;
     font-weight: bold;
     display: grid;
     grid-area: main;
@@ -49,23 +61,32 @@ body{
     grid-row: auto;
     grid-auto-flow: column;
     padding: 1rem;
+    border-style: solid;
+    border-radius: 1rem;
+    background-color: #e0f1f5;
+    opacity: 0.6;
+    justify-content: center;
+    box-shadow: 3px 3px 5px 1px #343434;
+    
 }
 
 .firstCard{
     background: #e0f1f5;
     width: 8rem;
-    height: 4rem;
-    padding: 16px 32px;
+    height: 3.5rem;
+   // padding: 16px 32px;
     text-align: center;
     font-size: 16px;
     margin: 4px 2px;
     opacity: 0.6;
     transition: 0.3s;
     border: none;
+    border-radius: 2rem;
     grid-area: main;
     grid-column: 2;
     grid-row: auto;
     grid-auto-flow: row;  
+    
     
 }
 
@@ -77,14 +98,15 @@ body{
 .secondCard{
     background: #e0f1f5;
     width: 8rem;
-    height: 4rem;
-    padding: 16px 32px;
+    height: 3.5rem;
+    //padding: 16px 32px;
     text-align: center;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 4px 16px;
     opacity: 0.6;
     transition: 0.3s;
     border: none;
+    border-radius: 2rem;
     grid-area: main;
     grid-column: 2;
     grid-row: auto;
