--- a/scss/index.scss
+++ b/scss/index.scss
@@ -133,55 +133,59 @@ h2, h3, h4, h5, h6{
     
   }
 
-  .image-2{
-    display: none;
+  h2{
+    font-size: 1.4rem;
+    text-align: center;
+  }
+  
+  p{
+    font-size: 1.1rem;
+  }
 
+  .container{
+    display: grid;
+    grid-template-areas: 
+    "header header header"
+    "main main main"
+    "main main main";
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 1rem;
+    row-gap: 2rem;
+  }
+
+  .start-image{
+    height: 100vh;
+    width: 100vw;
+    grid-area: header;
+    justify-self: center;
+    align-self: center;
+    background: url("../index.svg") no-repeat;
+    background-position: bottom;
+  }
+
+  .methanol-image{
+    display: none;
     margin-right: 3rem;
     grid-area: main;
     justify-self: center;
     align-self: center;
-    grid-column: 3;
-    grid-row: 2;
     background-position: bottom;
     
-    
   }
 
-  .image{
-      height: 100vh;
-      width: 100vw;
-      grid-area: header;
-      justify-self: center;
-      align-self: center;
-
-      background: url("../index.svg") no-repeat;
-      background-size: contain;
-  }
-
-  .text-box-air{
+  .air-text-box{
     display: none;
-    //line-height: 1.5rem;
     width: 125%;
     height: 130%;
-    padding: 1rem;
-    margin: 0;
+    margin-left: 10rem;
+    margin-bottom: -4rem;
     padding: 2rem;
     
     background: url("../pilar.svg") no-repeat center center;
-    background-position: bottom;
-    justify-self: center;
-    align-self: center;
-  }
+    background-size: contain;
 
-  .container{
-      display: grid;
-      grid-template-areas: 
-      "header header header"
-      "main main main"
-      "main main main";
-      grid-template-columns: 1fr 1fr 1fr;
-      column-gap: 1rem;
-      row-gap: 2rem;
+    justify-self: center;
+    align-self: end;
   }
 
   .content{
@@ -191,18 +195,28 @@ h2, h3, h4, h5, h6{
       background: #368c9c;
   }
 
+  .left{
+    grid-column: 1;
+  }
+
+  .center{
+    grid-column: 2;
+  }
+
+  .right{
+    grid-column: 3;
+  }
+
   .title{
       margin-top: 1rem;
       font-size: 2rem;
       color: #f5f5f5;
       grid-area: header;
-      grid-column: 2;
       justify-self: center;
   }
 
   .loge-molekyl{
       grid-area: header;
-      grid-column: 1;
       margin: 1rem;
       margin-top: 2rem;
       width: 9rem;
@@ -211,38 +225,9 @@ h2, h3, h4, h5, h6{
 
   .loge-project-air{
       grid-area: header;
-      grid-column: 3;
       width: 20rem;
       height: auto;
       justify-self: end;
-  }
-
-  .info{
-      grid-area: main;
-      grid-column: 1;
-      grid-row: 2;
-  }
-
-  .info2{
-      grid-area: main;
-      grid-column: 3;
-      grid-row: 2;
-  }
-
-  .info3{
-      grid-area: main;
-      grid-column: 1;
-      grid-row: 3;
-  }
-
-  .info4{
-      grid-area: main;
-      grid-column: 3;
-      grid-row: 3;
-  }
-
-  ul{
-    list-style: inside;
   }
 
   #fruit-btn{
@@ -266,15 +251,25 @@ h2, h3, h4, h5, h6{
       }
   }
 
-  footer{
-      display: grid;
-      background: #343434;
-      height: 5vh;
+  @media screen and (max-width: 1280px) and (max-height: 800px){
 
-      h1{
-          color: white;
-      }
+    .air-text-box{
+      margin-left: 10rem;
+      margin-bottom: -4rem;
+      padding: 2rem;
+    }
+
+    h1 {
+      font-size: 1.2rem;
+    }
+
+    h2 {
+      font-size: 1rem;
+    }
+    
+    p{
+      font-size: 0.9rem;
+    }
   }
-
 
 }
