--- a/css/index.css
+++ b/css/index.css
@@ -146,11 +146,23 @@ h2, h3, h4, h5, h6 {
   align-self: center;
   background-position: bottom;
 }
-#layout-air .air-text-box {
+#layout-air .left.air-text-box {
   display: none;
   width: 125%;
   height: 130%;
   margin-left: 10rem;
+  margin-bottom: -4rem;
+  padding: 2rem;
+  background: url("../pilar.svg") no-repeat center center;
+  background-size: contain;
+  justify-self: center;
+  align-self: end;
+}
+#layout-air .right.air-text-box {
+  display: none;
+  width: 125%;
+  height: 130%;
+  margin-right: 10rem;
   margin-bottom: -4rem;
   padding: 2rem;
   background: url("../pilar.svg") no-repeat center center;
@@ -211,7 +223,7 @@ h2, h3, h4, h5, h6 {
   box-shadow: 4px 4px 3px 1px #343434;
 }
 @media screen and (max-width: 1280px) and (max-height: 800px) {
-  #layout-air .air-text-box {
+  #layout-air .left.air-text-box {
     margin-left: 10rem;
     margin-bottom: -4rem;
     padding: 2rem;
