--- a/scss/index.scss
+++ b/scss/index.scss
@@ -225,6 +225,7 @@ h2, h3, h4, h5, h6{
       margin-top: 1rem;
       font-size: 2rem;
       color: #f5f5f5;
+      height: fit-content;
       grid-area: header;
       justify-self: center;
   }
@@ -269,7 +270,7 @@ h2, h3, h4, h5, h6{
 
     .left.air-text-box{
       margin-left: 10rem;
-      margin-bottom: -4rem;
+      margin-bottom: -8rem;
       padding: 2rem;
     }
 
