--- a/scss/index.scss
+++ b/scss/index.scss
@@ -130,7 +130,6 @@ h2, h3, h4, h5, h6{
     background-size: cover;
     height: 100vh;
     width: 100vw;
-    
   }
 
   h2{
@@ -165,48 +164,38 @@ h2, h3, h4, h5, h6{
 
   .methanol-image{
     display: none;
-    margin-right: 3rem;
+    width: 125%;
+    margin-right: 12rem;
+    margin-bottom: 2rem;
     grid-area: main;
     justify-self: center;
     align-self: center;
     background-position: bottom;
-    
+  }
+
+  .air-text-box{
+    display: none;
+    width: 40vw;
+    margin-top: 2rem;
+    padding: 2rem;
+    border: rgb(62, 88, 25) dashed 0.5rem;
+    border-radius: 2rem;
+    justify-self: center;
+    align-self: end;
   }
 
   .left.air-text-box{
-    display: none;
-    width: 125%;
-    height: 130%;
-    margin-left: 10rem;
-    margin-bottom: -4rem;
-    padding: 2rem;
-    
-    background: url("../pilar.svg") no-repeat center center;
-    background-size: contain;
-
-    justify-self: center;
-    align-self: end;
+    margin-left: 6rem;
   }
-  .right.air-text-box{
-    display: none;
-    width: 125%;
-    height: 130%;
-    margin-right: 10rem;
-    margin-bottom: -4rem;
-    padding: 2rem;
-    
-    background: url("../pilar.svg") no-repeat center center;
-    background-size: contain;
 
-    justify-self: center;
-    align-self: end;
+  .right.air-text-box{
+    margin-right: 6rem;
   }
 
   .content{
-      //outline: rgb(255, 0, 0) solid;
-      margin: 1rem;
-      padding: 1rem;
-      background: #368c9c;
+    margin: 1rem;
+    padding: 1rem;
+    background: #368c9c;
   }
 
   .left{
@@ -222,55 +211,54 @@ h2, h3, h4, h5, h6{
   }
 
   .title{
-      margin-top: 1rem;
-      font-size: 2rem;
-      color: #f5f5f5;
-      height: fit-content;
-      grid-area: header;
-      justify-self: center;
+    margin-top: 1rem;
+    font-size: 2rem;
+    color: #f5f5f5;
+    height: fit-content;
+    grid-area: header;
+    justify-self: center;
   }
 
   .loge-molekyl{
-      grid-area: header;
-      margin: 1rem;
-      margin-top: 2rem;
-      width: 9rem;
-      height: auto;
+    grid-area: header;
+    margin: 1rem;
+    margin-top: 2rem;
+    width: 9rem;
+    height: auto;
   }
 
   .loge-project-air{
-      grid-area: header;
-      width: 20rem;
-      height: auto;
-      justify-self: end;
+    grid-area: header;
+    width: 20rem;
+    height: auto;
+    justify-self: end;
   }
 
   #fruit-btn{
-      margin: 1rem;
-      padding: 1rem;
-      padding-left: 3rem;
-      padding-right: 3rem;
-      max-width: fit-content;
-      height: fit-content;
-      place-items: end;
+    margin: 1rem;
+    padding: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    max-width: fit-content;
+    height: fit-content;
+    place-items: end;
 
-      background: #f5f5f5;
-      border-color: #f5f5f5;
-      border-style: unset;
-      border-radius: 30px;
+    background: #f5f5f5;
+    border-color: #f5f5f5;
+    border-style: unset;
+    border-radius: 30px;
 
-      &:hover{
-          background: #fefefe;
-          border-color: #fefefe;
-          box-shadow: 4px 4px 3px 1px #343434;
-      }
+    &:hover{
+      background: #fefefe;
+      border-color: #fefefe;
+      box-shadow: 4px 4px 3px 1px #343434;
+    }
   }
 
   @media screen and (max-width: 1280px) and (max-height: 800px){
 
     .left.air-text-box{
-      margin-left: 10rem;
-      margin-bottom: -8rem;
+      margin-left: 8rem;
       padding: 2rem;
     }
 
