--- a/scss/index.scss
+++ b/scss/index.scss
@@ -158,7 +158,7 @@ h2, h3, h4, h5, h6{
     grid-area: header;
     justify-self: center;
     align-self: center;
-    background: url("../index.svg") no-repeat;
+    background: url("../air/index.svg") no-repeat;
     background-position: bottom;
   }
 
