--- a/scss/index.scss
+++ b/scss/index.scss
@@ -6,6 +6,9 @@ h1{
 
 body #layout-settings{
     background-color: #368c9c;
+    height: 100vh;
+    width: 100vw;
+    margin: 0px;
     
 }
 
@@ -42,42 +45,46 @@ h1.firstHeader{
     //justify-self: center;
 //}
 
-.secondHeader{
-    font-size: 2rem;
-    grid-area: main;
-    grid-column: 2;
-    grid-row: auto;
-    padding-top: 2rem;
+//.secondHeader{
+    //font-size: 2rem;
+   // grid-area: main;
+   // grid-column: 2;
+   // grid-row: auto;
+   // padding-top: 2rem;
     
-}
+//}
 
 .thirdHeader{
-    width: 8rem;
-    height: 3.5rem;
+    width: 20rem;
+    height: 4rem;
     font-weight: bold;
+    font-size: 200%;
+    text-align: center;
     display: grid;
     grid-area: main;
     grid-column: 1;
     grid-row: auto;
     grid-auto-flow: column;
-    padding: 1rem;
+    padding: 10px;
     border-style: solid;
     border-radius: 1rem;
     background-color: #e0f1f5;
     opacity: 0.6;
     justify-content: center;
     box-shadow: 3px 3px 5px 1px #343434;
-    
+    margin-top: 12px;
+    margin-left: 5rem;
 }
 
 .firstCard{
     background: #e0f1f5;
-    width: 8rem;
-    height: 3.5rem;
+    width: 14rem;
+    height: 4rem;
    // padding: 16px 32px;
     text-align: center;
     font-size: 16px;
-    margin: 4px 2px;
+    margin-left: 10rem;
+    margin: 4px 16px;
     opacity: 0.6;
     transition: 0.3s;
     border: none;
@@ -97,8 +104,8 @@ h1.firstHeader{
 
 .secondCard{
     background: #e0f1f5;
-    width: 8rem;
-    height: 3.5rem;
+    width: 14rem;
+    height: 4rem;
     //padding: 16px 32px;
     text-align: center;
     font-size: 16px;
@@ -108,7 +115,7 @@ h1.firstHeader{
     border: none;
     border-radius: 2rem;
     grid-area: main;
-    grid-column: 2;
+    grid-column: 3;
     grid-row: auto;
     grid-auto-flow: row;   
 }
@@ -139,12 +146,14 @@ body {
   color: #f5f5f5;
   display: grid;
   grid-template: "header header header" "main main main";
-  grid-row-gap: 1rem;
-  grid-column-gap: 1rem;
+//   grid-row-gap: 1rem;
+//   grid-column-gap: 1rem;
   justify-content: center;
   align-content: center;
   color: #343434;
+  overflow-x: hidden;
 }
+
 main {
   margin: 3rem;
   font-size: 1.5em;
@@ -156,7 +165,7 @@ main {
   justify-content: center;
 }
 
-.conterner {
+.container {
   grid-area: main;
   justify-self: center;
 }
@@ -225,4 +234,3 @@ input {
     font-size: 1.1rem;
   }
 }
-
