--- a/scss/index.scss
+++ b/scss/index.scss
@@ -10,7 +10,10 @@
 }
 
 body {
-  background: #e0f1f5;
+	background: url(https://img.freepik.com/free-photo/mount-mont-blanc-covered-snow-reflecting-water-evening-chamonix-france_181624-33408.jpg?w=1060&t=st=1673517939~exp=1673518539~hmac=b5592b56a3ed98b1970208efbb41eb10aee3a1c467f2aa6ee9286ba0cd343c9f);
+  background-size: cover;
+  background-color: rgb(0, 0, 0, .3);
+  background-blend-mode: multiply;
   color: #f5f5f5;
   display: grid;
   grid-template: "header header header" "main main main";
@@ -24,11 +27,12 @@ main {
   margin: 3rem;
   font-size: 1.5em;
   padding: 8rem;
-  background-color: #368c9c;
+  background-color:#000;
   width: max-content;
-  border-radius: 2em;
+  border-radius: 0.1em;
   box-shadow: 0px 6px 10px #333333;
   justify-content: center;
+  opacity: 0.75;
 }
 
 .conterner {
@@ -41,14 +45,35 @@ main {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 3.5rem;
   margin-top: 0;
   grid-area: header;
   margin-bottom: 2rem;
+  color: #e0f1f5;
+  text-align: center;
 }
+
 h2 {
   font-size: 1.2rem;
   margin: 0;
+  text-align: center;
+  color: #f5f5f5;;
+}
+
+input#sendBtn {
+  font-size: 0.9rem;
+  color: #f5f5f5;
+  background-color: #368c9c;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  border-radius: 0.2rem;
+  margin-left: 4.5em;
+  margin-right: 4.5em;
+  padding: 0.3em;
+  margin-top: 0.5em;
+}
+
+input#inputBox {
+  margin-top: 0.3em;
 }
 
 .settings {
@@ -58,13 +83,13 @@ h2 {
   padding: 1rem;
   margin-top: 3rem;
   margin-right: -6rem;
-  border-radius: 1rem;
+  border-radius: 0.3rem;
   box-shadow: 0px 6px 10px #333333;
   grid-area: header;
   grid-column: 3;
 
   &:hover {
-    background-color: #333333;
+    background-color: #368c9c;
   }
 }
 
@@ -74,29 +99,47 @@ h2 {
 }
 
 p {
-  font-size: 1.5rem;
+  font-size: 0.8rem;
   margin: 2rem;
+  color: #f5f5f5;
+  position: absolute;
+  text-align: center;
+  padding-top: 5em;
+  padding-left: 1.4em;
 }
 
 input {
   margin-top: 0;
 }
 
+a {
+  color: #90e0ef;
+  &:hover {
+    color: #368c9c;
+  }
+}
+
+
 @media screen and (max-width: 1280px) and (max-height: 800px) {
   main {
     margin: 2rem;
     font-size: 1.2rem;
-    padding: 6rem;
+    padding: 8rem;
   }
 
   h1 {
-    font-size: 1.2rem;
+    font-size: 3.5rem;
   }
   h2 {
     font-size: 1rem;
   }
 
   p {
-    font-size: 1.1rem;
+    font-size: 0.8rem;
   }
+}
+
+.login {
+  display: flex;
+  flex-direction: column;
 }
