--- a/scss/index.scss
+++ b/scss/index.scss
@@ -1,7 +1,139 @@
 @import url("https://cdn.jsdelivr.net/gh/jgthms/minireset.css@master/minireset.min.css");
-/*h1 {
-  //color: hotpink;
-}*/
+h1{
+    color: black;
+    padding-top: 1.5rem;   
+}
+
+body #layout-settings{
+    background-color: #368c9c;
+    height: 100vh;
+    width: 100vw;
+    margin: 0px;
+    
+}
+
+.container{
+    display: grid;
+    grid-template: "header header header" "main main main" "main main main" "main main main" "main main main" "main main main" "main main main" "main main main";
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: repeat(20vh);
+    column-gap: 1rem;
+    row-gap: 2rem;
+    justify-items: center;   
+}
+
+h1.firstHeader{
+    display: flex;
+    justify-content: center;
+    border-bottom: solid;
+    border-color: #343434;
+    background-color: #e0f1f5;
+    opacity: 0.6;
+    font-size: 2.5rem;
+    padding: 1rem;
+}
+#scanButton{
+    display: none;
+    width: 4rem;
+    height: 2rem;
+} 
+
+
+//.firstHeader{
+    //font-size: 2.5rem;
+    //grid-area: header;
+    //justify-self: center;
+//}
+
+//.secondHeader{
+    //font-size: 2rem;
+   // grid-area: main;
+   // grid-column: 2;
+   // grid-row: auto;
+   // padding-top: 2rem;
+    
+//}
+
+.thirdHeader{
+    width: 20rem;
+    height: 4rem;
+    font-weight: bold;
+    font-size: 200%;
+    text-align: center;
+    display: grid;
+    grid-area: main;
+    grid-column: 1;
+    grid-row: auto;
+    grid-auto-flow: column;
+    padding: 10px;
+    border-style: solid;
+    border-radius: 1rem;
+    background-color: #e0f1f5;
+    opacity: 0.6;
+    justify-content: center;
+    box-shadow: 3px 3px 5px 1px #343434;
+    margin-top: 12px;
+    margin-left: 5rem;
+}
+
+.firstCard{
+    background: #e0f1f5;
+    width: 14rem;
+    height: 4rem;
+   // padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin-left: 10rem;
+    margin: 4px 16px;
+    opacity: 0.6;
+    transition: 0.3s;
+    border: none;
+    border-radius: 2rem;
+    grid-area: main;
+    grid-column: 2;
+    grid-row: auto;
+    grid-auto-flow: row;  
+    
+    
+}
+
+.firstCard:hover{
+    opacity: 1;
+    box-shadow: 3px 3px 5px 1px #343434;
+}
+
+.secondCard{
+    background: #e0f1f5;
+    width: 14rem;
+    height: 4rem;
+    //padding: 16px 32px;
+    text-align: center;
+    font-size: 16px;
+    margin: 4px 16px;
+    opacity: 0.6;
+    transition: 0.3s;
+    border: none;
+    border-radius: 2rem;
+    grid-area: main;
+    grid-column: 3;
+    grid-row: auto;
+    grid-auto-flow: row;   
+}
+
+.secondCard:hover{
+    opacity: 1;
+    box-shadow: 3px 3px 5px 1px #343434;
+}
+
+.buttons1 + .buttons2 + .buttons3 + .buttons4 + .buttons5{
+    display: grid;
+    grid-area: main;
+    grid-column: 2;
+    grid-row: 3;
+    grid-auto-flow: row;
+    justify-content: space-evenly;
+}
+
 
 #scanButton {
   display: none;
@@ -17,12 +149,14 @@ body {
   color: #f5f5f5;
   display: grid;
   grid-template: "header header header" "main main main";
-  grid-row-gap: 1rem;
-  grid-column-gap: 1rem;
+//   grid-row-gap: 1rem;
+//   grid-column-gap: 1rem;
   justify-content: center;
   align-content: center;
   color: #343434;
+  overflow-x: hidden;
 }
+
 main {
   margin: 3rem;
   font-size: 1.5em;
@@ -35,7 +169,7 @@ main {
   opacity: 0.75;
 }
 
-.conterner {
+.container {
   grid-area: main;
   justify-self: center;
 }
